--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
     "@google/generative-ai": "^0.24.1",
+    "@types/form-data": "^2.5.2",
     "@types/multer": "^2.0.0",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/ws": "^8.18.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
@@ -27,6 +30,7 @@
     "drizzle-orm": "^0.44.3",
     "drizzle-zod": "^0.8.2",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
@@ -35,6 +39,7 @@
     "passport-google-oauth20": "^2.0.0",
     "postgres": "^3.4.7",
     "pptxgenjs": "^4.0.1",
+    "ws": "^8.18.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
