--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mime-types": "^3.0.1",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.1.0",
     "drizzle-kit": "^0.31.4",
