--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "postgres": "^3.4.7",
     "pptxgenjs": "^4.0.1",
     "ws": "^8.18.3",
+    "youtubei.js": "^16.0.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
