--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "pptxgenjs": "^4.0.1",
     "ws": "^8.18.3",
     "youtubei.js": "^16.0.1",
+    "ytdl-core": "^4.11.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
